src/styles/styles.css
*,
*::before,
*::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root {
    --body: #2a2a2a;
    --navy-blue: #2a3853;
    --pink-dark: #c29a9a;
    --pink-medium-dark: #d4b4b4;
    --pink-medium-light: #f1d4d4;
    --pink-light: #f4e4e1;
    --pink-lightest: #f8edeb;
}

body {
    font-family: 'Montserrat', sans-serif;
    color: var(--body);
}

.body-dark {
    background-color: var(--pink-dark);
}

.body-light {
    background-color: var(--pink-lightest);
}

.container {
    max-width: 1000px;
    padding: 0 2em;
    margin: 1em auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section {
    margin-bottom: 3em;
}

h3 {
    font-size: 1.125rem;
    font-weight: 600;
}

a {
    text-transform: uppercase;
    text-decoration: none;
    cursor: pointer;
}

.navbar {
    max-width: 280px;
    margin: 1.5em auto;
}

.navbar ul {
    display: flex;
    justify-content: space-between;
}

.navbar li {
    list-style: none;
}

.nav-link {
    font-size: 0.875rem;
    font-weight: 500;
    color: var(--navy-blue);
}

.nav-link-active {
    font-weight: 600;
    border-bottom: 0.25em solid var(--pink-medium-dark);
}

.icon {
    font-size: 2rem;
    color: var(--pink-dark);
}

.btn {
    font-size: 0.875rem;
    font-weight: 700;
    width: 100%;
    padding: 0.75em 1.75em;
    position: relative;
    display: block;
    transition: all 100ms ease-in;
    cursor: pointer;
}

.btn:hover {
    transform: scale(1.05);
}

@media screen and (min-width: 600px) {
    .btn {
        width: max-content;
        display: inline-block;
    }
}

.btn-main-light {
    color: var(--navy-blue);
    background-color: var(--pink-lightest);
    border: 1px solid var(--pink-lightest);
    box-shadow: 4px 4px 0 var(--pink-medium-light);
}

.btn-secondary-light {
    color: var(--pink-lightest);
    background-color: var(--pink-dark);
    border: 1px solid var(--pink-lightest);
    box-shadow: 4px 4px 0 -1px var(--pink-dark),
        4px 4px 0 var(--pink-medium-light);
}

.btn-main-dark {
    color: var(--pink-lightest);
    background-color: var(--pink-dark);
    border: 1px solid var(--pink-dark);
    box-shadow: 4px 4px 0 var(--pink-medium-dark);
}

.btn-secondary-dark {
    color: var(--pink-dark);
    background-color: var(--pink-light);
    border: 1px solid var(--pink-dark);
    box-shadow: 4px 4px 0 -1px var(--pink-light),
        4px 4px 0 var(--pink-medium-dark);
}

.title-cursive,
.title-serif {
    display: block;
}

.title-cursive {
    font-family: 'Cedarville Cursive', cursive;
    text-transform: lowercase;
    color: var(--navy-blue);
}

.title-serif {
    font-family: 'Playfair Display';
    font-weight: 700;
    text-transform: capitalize;
}

.section-title {
    text-align: center;
    margin: 2.5em 1em 2.5em;
}

.section .title-cursive {
    font-size: 3rem;
}

.section .title-serif {
    font-size: 3rem;
    color: var(--pink-dark);
    margin-top: -0.5em;
}

/* ------------------------------------------------------------------ 
-------------------------------- HOME -------------------------------
--------------------------------------------------------------------- */

.intro {
    text-align: center;
    margin: 0 auto;
}

.intro-photo {
    width: 100%;
    max-width: 70vh;
    height: auto;
    padding: 2em;
    margin: 0 auto;
}

.intro-title .title-cursive {
    font-size: 2.25rem;
}

.intro-title .title-serif {
    font-size: 5.5rem;
    text-shadow: 4px 4px 0px var(--pink-lightest);
    color: var(--navy-blue);
    margin-top: -0.3em;
}

.intro-body {
    font-size: 0.9375rem;
    line-height: 1.8;
    max-width: 600px;
    padding: 0 1.25em;
    margin: 2em auto;
}

strong {
    font-weight: 500;
    position: relative;
}

strong::after {
    content: '';
    background-color: var(--pink-medium-dark);
    width: 98%;
    height: 0.65em;
    position: absolute;
    top: 0.75em;
    left: 0.35em;
    z-index: -2;
}

.intro-buttons {
    margin: 3em 1em 2em;
}

.intro-buttons :nth-child(2) {
    margin-top: 1.25em;
}

@media screen and (min-width: 600px) {
    .intro-buttons :nth-child(2) {
        margin-top: 0;
        margin-left: 1.25em;
    }
}

@media screen and (min-width: 1200px) {
    .body-dark {
        padding: 0 3em;
    }

    .intro {
        text-align: left;
        max-width: 1200px;
        min-height: calc(80vh - 69px);
        padding: 3em 0;
        margin: 0 auto;
        display: grid;
        column-gap: 0.5em;
        grid-template-areas: 'text photo';
        align-items: center;
    }

    .intro-photo {
        padding: 0;
        grid-area: photo;
    }

    .intro-text-elements {
        grid-area: text;
        justify-self: end;
    }

    .intro-title .title-cursive {
        font-size: 3rem;
    }

    .intro-title .title-serif {
        font-size: 6.5rem;
        margin-left: -0.165rem;
    }

    .intro-body {
        font-size: 1rem;
        line-height: 2;
        max-width: 480px;
        padding: 0;
        margin: 2.5em 0 3.5em;
    }

    .intro-buttons {
        margin: 1em 0 2em;
    }
}

/* ------------------------------------------------------------------ 
----------------------------- PORTFOLIO -----------------------------
--------------------------------------------------------------------- */

.projects {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
    gap: 1.5em;
}

.window {
    height: 100%;
}

.window-buttons {
    background-color: var(--pink-dark);
    height: 16px;
    padding-left: 4px;
    display: flex;
    align-items: center;
}

.window-btn {
    background-color: var(--pink-medium-light);
    border-radius: 50%;
    width: 8px;
    height: 8px;
    margin-left: 0.25em;
    display: inline-block;
}

.project {
    position: relative;
}

.project-image {
    border: 1px solid var(--pink-dark);
    max-width: 100%;
    height: auto;
}

.project-info {
    text-align: center;
    color: var(--pink-lightest);
    background-color: var(--navy-blue);
    border: 1px solid var(--pink-dark);
    opacity: 0;
    width: 100%;
    height: calc(100% - 5px);
    visibility: hidden;
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: all 300ms ease-in;
}

.window:hover .project-info {
    opacity: 1;
    visibility: visible;
}

.project-body {
    font-size: 0.875rem;
    line-height: 1.6;
    width: 85%;
    max-width: 400px;
    margin: 1.5em auto 2em;
}

.project-buttons :nth-child(2) {
    margin-left: 1em;
}

.project-buttons .icon {
    font-size: 2.5rem;
}

.card {
    background-color: var(--pink-light);
    margin-bottom: 3em;
    display: flex;
    flex-direction: column;
}

.card-image {
    width: 100%;
    min-width: 415px;
    max-width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: 45%;
}

.card-content {
    margin: 0 1.5em;
    flex-shrink: 2;
}

.card-title {
    color: var(--navy-blue);
    margin-top: 1.5em;
}

.card-body {
    line-height: 1.8;
    margin: 1.5em 0;
}

.text-link {
    color: var(--body);
    text-transform: capitalize;
    text-decoration: underline;
}

.text-link:visited {
    color: var(--body);
}

.card-buttons {
    text-align: center;
    height: 41px;
    margin: 0.5em 0 2em;
    position: relative;
    z-index: 3;
}

@media screen and (min-width: 600px) {
    .card-buttons {
        width: max-content;
    }
}

@media screen and (min-width: 750px) {
    .card {
        flex-direction: row;
    }
}

/* ------------------------------------------------------------------ 
------------------------------- ABOUT -------------------------------
--------------------------------------------------------------------- */

.section-about-photo {
    background-image: url(../images/photo-about.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center bottom;
    width: 100%;
    min-height: 450px;
}

.section-about-body {
    line-height: 1.8;
    margin: 3em 0;
}

.section-about-body p + p {
    margin-top: 1.2em;
}

.actions {
    background-color: var(--pink-light);
    padding: 1.5em;
    margin-bottom: 3.5em;
    display: flex;
    flex-direction: column;
    align-self: stretch;
}

.action {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.action p {
    font-size: 1rem;
    font-weight: 500;
    text-transform: initial;
    line-height: 1.8;
    color: var(--navy-blue);
    justify-self: start;
}

.divider {
    background-color: var(--pink-medium-dark);
    width: 100%;
    height: 1px;
    margin: 1em 0;
}

@media screen and (min-width: 600px) {
    .actions {
        width: 100%;
        align-self: center;
        flex-direction: row;
        justify-content: space-evenly;
    }

    .action {
        text-align: center;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .action p {
        max-width: 135px;
        margin-bottom: 1.5em;
    }

    .icon {
        font-size: 3rem;
        align-self: center;
    }

    .divider {
        width: 1px;
        height: 130px;
        margin: 0 1em;
    }
}

